test/test-files/analyzer/operators/error-bitwise-operators-are-booleans-or-integers/exception.out
Semantic error in : ./test-files/analyzer/operators/error-bitwise-operators-are-booleans-or-integers/source.spice:2:22:
Wrong data type for operator: Cannot apply '|' operator on types string and int

2  int calcResult = "test" | 6;
                    ^^^^^^^^^^